bootstrap/apps/manifests/nginx-example/destinationrule.yaml
---
apiVersion: networking.istio.io/v1alpha3
kind: DestinationRule
metadata:
  name: nginx
  namespace: nginx
spec:
  host: nginx
  trafficPolicy:
    tls:
      mode: DISABLE
