bootstrap/apps/manifests/nginx-example/virtualservice.yaml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: nginx
  namespace: nginx
spec:
  hosts:
    - "*"
  gateways:
    - nginx-gateway.nginx.svc.cluster.local
  http:
    - match:
        - uri:
            prefix: /nginx-example
      rewrite:
        uri: "/"
      route:
        - destination:
            host: nginx
            port:
              number: 80
